desktop and mobile version

--- a/recipe-page-main/public/index.html
+++ b/recipe-page-main/public/index.html
@@ -1,77 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="output.css">
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Frontend Mentor | Recipe page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<body>
 
-  Simple Omelette Recipe
+<body class="bg-eggShell flex justify-center items-center min-h-screen font-body">
+  <main class="bg-roseWhite md:w-2/5 min-h-screen md:mt-20 md:mb-20 rounded-lg">
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
 
-  Preparation time
+    <div class="p-5">
+      <img class="rounded-lg" src="./images/image-omelette.jpeg" alt="omelette">
+    </div>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+    <!-- intro -->
+    <div class="p-5">
+      <h1 class="font-bold text-4xl font-headings">
+        Simple Omelette Recipe
+      </h1>
+      <p class="text-gray-500 pt-4">
+        An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+      </p>
+    </div>
 
-  Ingredients
+    <!-- Preparation -->
+    <div class="bg-raspberry ml-5 mr-5 rounded-lg p-5 red-bullets">
+      <h3 class="text-nutmeg font-bold pl-4  text-lg">
+        Preparation time
+      </h3>
+      <ul class="pl-10 list-disc text-gray-500">
+        <li>
+          <span class="font-bold">Total:</span> Approximately 10 minutes
+        </li>
+        <li>
+          <span class="font-bold">Preparation:</span> 5 minutes
+        </li>
+        <li>
+          <span class="font-bold">Cooking:</span> 5 minutes
+        </li>
+      </ul>
+    </div>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+    <!-- Ingredients -->
+    <div class="p-5 ">
+      <h2 class="text-nutmeg text-xl font-bold font-headings tracking-wider">
+        Ingredients
+      </h2>
+      <ul class="list-disc pl-6 text-gray-500 border-b border-gray-500 red-bullets">
+        <li>2-3 large eggs</li>
+        <li>Salt, to taste</li>
+        <li>Pepper, to taste</li>
+        <li> 1 tablespoon of butter or oil</li>
+        <li class="pb-4">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </ul>
+    </div>
 
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+    <!-- Instructions  -->
+    <div class="p-5">
+      <h2 class="text-nutmeg  text-xl font-bold font-headings tracking-wider">
+        Instructions
+      </h2>
+      <ol class="list-decimal red-bullets p-5 text-gray-500 border-b border-gray-500">
+        <li>
+          <span class="font-bold">Beat the eggs:</span>
+          In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+          You can add a tablespoon of water or milk for a fluffier texture.
+        </li>
+        <li>
+          <span class="font-bold">Heat the pan:</span>
+          Place a non-stick frying pan over medium heat and add butter or oil.
+        </li>
+        <li>
+          <span class="font-bold">Cook the omelette:</span>
+          Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+          the eggs evenly coat the surface.
+        </li>
+        <li>
+          <span class="font-bold">Add fillings (optional):</span>
+          When the eggs begin to set at the edges but are still slightly runny in the
+          middle, sprinkle your chosen fillings over one half of the omelette.
+        </li>
+        <li>
+          <span class="font-bold">Fold and serve:</span>
+          As the omelette continues to cook, carefully lift one edge and fold it over the 
   fillings. Let it cook for another minute, then slide it onto a plate.
+        </li>
+        <li>
+          <span class="font-bold">Enjoy:</span>
+          Serve hot, with additional salt and pepper if needed.
+        </li>
+      </ol>
+    </div>
 
-  Enjoy: Serve hot, with additional salt and pepper if needed.
+    <!-- Nutrition -->
+    <div class="p-5">
+      <h2 class="text-nutmeg  text-xl font-bold font-headings tracking-wider">
+        Nutrition
+      </h2>
+      <p class="text-gray-500 pt-3">
+        The table below shows nutritional values per serving without the additional fillings.
+      </p>
 
-  Nutrition
+      <div class="flex pl-8  text-gray-500 border-b border-gray-400 pt-4 pb-2">
+        <p>Calories</p>
+        <p class="text-nutmeg font-bold pl-20 md:pl-48 ">277kcal</p>
+      </div>
+      <div class="flex pl-8 md:gap-4 text-gray-500 border-b border-gray-400 pt-4 pb-2">
+        <p>Carbs</p>
+        <p class="text-nutmeg font-bold pl-24 md:pl-48">0g</p>
+      </div>
+      <div class="flex pl-8 gap-2 md:gap-1 text-gray-500 border-b border-gray-400 pt-4 pb-2">
+        <p>Protein</p>
+        <p class="text-nutmeg font-bold pl-20 md:pl-48">20g</p>
+      </div>
+      <div class="flex pl-8  gap-4 md:gap-7 text-gray-500 pt-4 pb-2 ">
+        <p>Fat</p>
+        <p class="text-nutmeg font-bold pl-24 md:pl-48">22g</p>
+      </div>
 
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    
+    </div>
+  </main>
 </body>
 </html>
