Changed the gradient

--- a/results-summary-component-main/public/index.html
+++ b/results-summary-component-main/public/index.html
@@ -14,14 +14,14 @@
   <main class="md:flex">
 
     <!-- purple div -->
-    <div class="bg-gradient-to-b from-purple-600 to-purple-800 text-center rounded-b-3xl md:rounded-3xl z-10">
+    <div class="bg-gradient-to-b from-slateBlue to-royalBlue text-center rounded-b-3xl md:rounded-3xl z-10">
 
       <h1 class="text-gray-400 text-lg font-bold pt-6 pb-8 md:text-xl">
         Your Result
       </h1>
       <!-- circle div -->
      
-      <div class="bg-gradient-to-b from-purple-800 to-purple-600 md:w-36 md:h-36 md:mr-28  w-32 h-32 rounded-full flex items-center justify-center ml-32">
+      <div class="bg-gradient-to-b from-violetBlue to-persianBlue md:w-36 md:h-36 md:mr-28  w-32 h-32 rounded-full flex items-center justify-center ml-32">
         <div>
           <p class="text-white text-5xl font-bold">76</p>
           <p class="text-gray-400">of 100</p>
